--- a/demo-cpu-abfs.ipynb
+++ b/demo-cpu-abfs.ipynb
@@ -47,8 +47,8 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://10.3.0.15:8786</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://10.3.0.15:8787/status' target='_blank'>http://10.3.0.15:8787/status</a>\n",
+       "  <li><b>Scheduler: </b>tcp://10.3.0.5:8786</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://10.3.0.5:8787/status' target='_blank'>http://10.3.0.5:8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
@@ -63,7 +63,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.3.0.15:8786' processes=50 threads=400, memory=2.95 TB>"
+       "<Client: 'tcp://10.3.0.5:8786' processes=50 threads=400, memory=2.95 TB>"
       ]
      },
      "execution_count": 4,
@@ -99,8 +99,8 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://10.3.0.15:8786</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://10.3.0.15:8787/status' target='_blank'>http://10.3.0.15:8787/status</a>\n",
+       "  <li><b>Scheduler: </b>tcp://10.3.0.5:8786</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://10.3.0.5:8787/status' target='_blank'>http://10.3.0.5:8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
@@ -115,7 +115,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.3.0.15:8786' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.3.0.5:8786' processes=48 threads=384, memory=2.84 TB>"
       ]
      },
      "execution_count": 6,
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +170,11 @@
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-dask-demo</td><td>dask-dask-demo_1580016924_18ccb8ce</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-dask-demo/runs/dask-dask-demo_1580016924_18ccb8ce?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/dask-azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>abfs-dask-demo</td><td>abfs-dask-demo_1580021397_bc341dad</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/abfs-dask-demo/runs/abfs-dask-demo_1580021397_bc341dad?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/azureml-dask\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
-       "Run(Experiment: dask-dask-demo,\n",
-       "Id: dask-dask-demo_1580016924_18ccb8ce,\n",
+       "Run(Experiment: abfs-dask-demo,\n",
+       "Id: abfs-dask-demo_1580021397_bc341dad,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
@@ -202,8 +202,8 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://10.3.0.15:8786</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://10.3.0.15:8787/status' target='_blank'>http://10.3.0.15:8787/status</a>\n",
+       "  <li><b>Scheduler: </b>tcp://10.3.0.5:8786</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://10.3.0.5:8787/status' target='_blank'>http://10.3.0.5:8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
@@ -218,7 +218,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.3.0.15:8786' processes=50 threads=400, memory=2.95 TB>"
+       "<Client: 'tcp://10.3.0.5:8786' processes=50 threads=400, memory=2.95 TB>"
       ]
      },
      "execution_count": 9,
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        " 'abfs://datasets/noaa/isd/year=2018/month=9/part-00089-tid-9138739344806125380-ef942066-1d58-49f9-8ecb-3329cbe6e57e-383784.c000.snappy.parquet']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,15 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.4 ms, sys: 654 µs, total: 22.1 ms\n",
-      "Wall time: 6.93 s\n"
+      "CPU times: user 19.6 ms, sys: 529 µs, total: 20.1 ms\n",
+      "Wall time: 6.85 s\n"
      ]
     },
     {
@@ -498,7 +498,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,6 +510,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 374 ms, sys: 10.8 ms, total: 385 ms\n",
+      "Wall time: 24.7 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1270243333"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False)\n",
+    "df = df.persist() \n",
+    "%time len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -517,8 +547,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 356 ms, sys: 19 ms, total: 375 ms\n",
-      "Wall time: 24.6 s\n"
+      "CPU times: user 85.8 ms, sys: 4.06 ms, total: 89.9 ms\n",
+      "Wall time: 280 ms\n"
      ]
     },
     {
@@ -533,8 +563,6 @@
     }
    ],
    "source": [
-    "df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False)\n",
-    "df = df.persist() \n",
     "%time len(df)"
    ]
   },
@@ -547,36 +575,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 87.2 ms, sys: 0 ns, total: 87.2 ms\n",
-      "Wall time: 285 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1270243333"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%time len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 7.1 s, sys: 138 ms, total: 7.24 s\n",
-      "Wall time: 1min 24s\n"
+      "CPU times: user 7.32 s, sys: 198 ms, total: 7.51 s\n",
+      "Wall time: 1min 23s\n"
      ]
     },
     {
@@ -808,7 +808,7 @@
        "max    2.018000e+03  3.100000e+01  1.000000e+00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,15 +819,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 347 ms, sys: 32.5 ms, total: 380 ms\n",
-      "Wall time: 2min 30s\n",
+      "CPU times: user 423 ms, sys: 26 ms, total: 449 ms\n",
+      "Wall time: 3min 1s\n",
       "Dataframe is: 626.5GB\n"
      ]
     }
@@ -839,15 +839,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 164 ms, sys: 5.18 ms, total: 169 ms\n",
-      "Wall time: 11.3 s\n"
+      "CPU times: user 150 ms, sys: 5.63 ms, total: 156 ms\n",
+      "Wall time: 13 s\n"
      ]
     },
     {
@@ -1013,7 +1013,7 @@
        "2008-01-05  5.0      1.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1231,22 +1231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-dask-demo</td><td>dask-dask-demo_1580016924_18ccb8ce</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-dask-demo/runs/dask-dask-demo_1580016924_18ccb8ce?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/dask-azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>abfs-dask-demo</td><td>abfs-dask-demo_1580021397_bc341dad</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/abfs-dask-demo/runs/abfs-dask-demo_1580021397_bc341dad?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/azureml-dask\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
-       "Run(Experiment: dask-dask-demo,\n",
-       "Id: dask-dask-demo_1580016924_18ccb8ce,\n",
+       "Run(Experiment: abfs-dask-demo,\n",
+       "Id: abfs-dask-demo_1580021397_bc341dad,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,16 +1259,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare data"
+    "## Transform data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## insert any Pandas-like Dask data prep code \n",
+    "## insert any Pandas-like Dask transformation code \n",
     "df['temperature'] = df['temperature']*(9/5)+32 # 'Merica"
    ]
   },
@@ -1278,28 +1278,26 @@
    "source": [
     "## Write data\n",
     "\n",
-    "**Important:** you will have not access to write to this account, get your own storage account! \n",
-    "\n",
     "See the [API documentation for dask.dataframe.to_parquet](https://docs.dask.org/en/latest/dataframe-api.html#dask.dataframe.to_parquet) for additional settings. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 250 ms, sys: 39.7 ms, total: 290 ms\n",
-      "Wall time: 1min 50s\n"
+      "CPU times: user 2.56 s, sys: 166 ms, total: 2.73 s\n",
+      "Wall time: 1min 37s\n"
      ]
     }
    ],
    "source": [
-    "df = df.repartition(npartitions=df.npartitions*10)\n",
-    "%time df.to_parquet(f'{protocol}://{container}/dask/outputs/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS)"
+    "df_out = df.repartition(npartitions=df.npartitions*10)\n",
+    "%time df_out.to_parquet(f'{protocol}://{container}/dask/outputs/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS)"
    ]
   },
   {
@@ -1311,16 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = dd.read_parquet(files, engine='pyarrow', storage_options=STORAGE_OPTIONS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1351,7 @@
        " 'month']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,15 +1375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 559 ms, sys: 47.7 ms, total: 607 ms\n",
-      "Wall time: 2min 46s\n"
+      "CPU times: user 585 ms, sys: 57.8 ms, total: 643 ms\n",
+      "Wall time: 3min 29s\n"
      ]
     },
     {
@@ -1409,7 +1398,7 @@
        "             silent=None, subsample=1, verbosity=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,15 +1410,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.85 s, sys: 3.33 s, total: 6.18 s\n",
-      "Wall time: 10.4 s\n"
+      "CPU times: user 4.54 s, sys: 3.67 s, total: 8.21 s\n",
+      "Wall time: 14.4 s\n"
      ]
     }
    ],
@@ -1439,14 +1428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE: 8.504\n"
+      "Training RMSE: 18.804\n"
      ]
     }
    ],
@@ -1464,14 +1453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[06:02:43] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+      "[07:16:04] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
     }
    ],
@@ -1483,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1496,9 +1485,10 @@
    ],
    "source": [
     "model = Model.register(run.experiment.workspace, \n",
-    "                       model_path, 'xgboost-noaa-isd', \n",
-    "                       description='Dask XGBoost NOAA ISD temperature predictor',\n",
-    "                       model_framework='XGBoost')"
+    "                       model_name      = 'xgboost-noaa-isd', \n",
+    "                       model_path      = model_path,\n",
+    "                       description     = 'Dask XGBoost NOAA ISD temperature predictor',\n",
+    "                       model_framework = 'DaskML.XGBoostRegressor')"
    ]
   }
  ],
