--- a/demo-cpu-dstore.ipynb
+++ b/demo-cpu-dstore.ipynb
@@ -1371,9 +1371,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 896 ms, sys: 43.3 ms, total: 940 ms\n",
+      "Wall time: 4min 30s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=16,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xgb = XGBRegressor(n_estimators=16)\n",
     "%time xgb.fit(X, y)"
@@ -1381,18 +1406,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.41 s, sys: 3.84 s, total: 8.25 s\n",
+      "Wall time: 14.4 s\n"
+     ]
+    }
+   ],
    "source": [
     "%time y_pred = xgb.predict(X).compute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training RMSE: 18.836\n"
+     ]
+    }
+   ],
    "source": [
     "rmse = (((y.to_dask_array().compute()-y_pred)**2).mean())**.5 # runs locally, distribute (?)\n",
     "print(f'Training RMSE: {round(rmse, 3)}')"
@@ -1407,9 +1449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[07:41:54] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    }
+   ],
    "source": [
     "model_path = 'xgboost_noaa_isd.joblib.dat'\n",
     "joblib.dump(xgb, model_path)\n",
@@ -1418,9 +1468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering model xgboost-noaa-isd\n"
+     ]
+    }
+   ],
    "source": [
     "model = Model.register(run.experiment.workspace, \n",
     "                       model_name      = 'xgboost-noaa-isd', \n",
