fix mistakes, rename again

--- a/start-cluster-cpu.ipynb
+++ b/start-cluster-cpu.ipynb
@@ -260,9 +260,9 @@
     "daskdata = 'noaa-isd-files'\n",
     "\n",
     "if daskdata not in ws.datasets:\n",
-    "    #ds = Dataset.File.from_files('https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/*/*/*.parquet', validate=False)\n",
-    "    #os.system('sudo chmod 777 /mnt')\n",
-    "    #ds.download('/mnt/data/isd')\n",
+    "    ds = Dataset.File.from_files('https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/*/*/*.parquet', validate=False)\n",
+    "    os.system('sudo chmod 777 /mnt')\n",
+    "    ds.download('/mnt/data/isd')\n",
     "    ws.datastores['gen2'].upload('/mnt/data/isd', '/noaa-isd')\n",
     "    ds = ds.register(ws, daskdata)"
    ]
