--- a/experimental/start.ipynb
+++ b/experimental/start.ipynb
@@ -493,10 +493,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes = len(cluster.workers_list)+1\n",
+    "nodes"
+   ]
   },
   {
    "cell_type": "code",
