--- a/experimental/start.ipynb
+++ b/experimental/start.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -514,9 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################### Scheduler and workers are disconnected. ####################\n"
+     ]
+    }
+   ],
    "source": [
     "cluster.close()"
    ]
