renaming, major updates, remove ADLSv2
should probably have better commit messages

--- a/01.start_cpu_cluster.ipynb
+++ b/01.start_cpu_cluster.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-rg')"
+       "Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg')"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
       "\n",
       "Name: dask\n",
       "\n",
-      "vNET RG: cody-rg\n",
+      "vNET RG: cody-eastus-rg\n",
       "vNET name: wifi\n",
       "vNET subnet name: default\n",
       "\n",
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-rg'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=westeurope, tags=None)"
+       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-eastus-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
       ]
      },
      "execution_count": 4,
@@ -229,17 +229,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daskdata = 'noaa-isd-files'\n",
+    "dsetdata = 'noaa-isd-files'\n",
     "data_url = 'https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather'\n",
     "\n",
-    "if daskdata not in ws.datasets:\n",
+    "if dsetdata not in ws.datasets:\n",
     "    os.system('sudo chmod 777 /mnt')\n",
     "    for year in range(2008, 2020+1):\n",
     "        ds = Dataset.File.from_files(f'{data_url}/year={year}/month=*/*.parquet', validate=False)\n",
     "        %time ds.download(f'/mnt/data/isd/year={year}', overwrite=True)\n",
-    "    ws.datastores['gen2'].upload('/mnt/data/isd', '/noaa-isd')\n",
-    "    ds = Dataset.File.from_files((ws.datastores['gen2'], '/noaa-isd/**/*.parquet'))\n",
-    "    ds = ds.register(ws, daskdata)"
+    "    ws.get_default_datastore().upload('/mnt/data/isd', '/noaa-isd', show_progress=False)\n",
+    "    ds = Dataset.File.from_files((ws.get_default_datastore(), '/noaa-isd/**/*.parquet'))\n",
+    "    ds = ds.register(ws, dsetdata)"
    ]
   },
   {
@@ -305,13 +305,13 @@
       "############################## Setting up cluster ##############################\n",
       "########################## Submitting the experiment ###########################\n",
       "####################### Waiting for scheduler node's IP ########################\n",
-      ".............................................................................................................................\n",
+      ".................................\n",
       "\n",
       "\n",
-      "########################## Scheduler: 10.12.0.18:8786 ##########################\n",
+      "########################## Scheduler: 10.12.0.15:8786 ##########################\n",
       "############################### On the same VNET ###############################\n",
       "########################### Connections established ############################\n",
-      "############################# Scaling to 1 workers #############################\n",
+      "############################ Scaling to 10 workers #############################\n",
       "############################### Scaling is done ################################\n"
      ]
     }
@@ -321,7 +321,7 @@
     "                         ct, \n",
     "                         env, \n",
     "                         jupyter=True, \n",
-    "                         initial_nodes=10,\n",
+    "                         initial_node_count=10,\n",
     "                         datastores=[ws.datastores[datastore] for datastore in ws.datastores]\n",
     "                        )"
    ]
@@ -334,11 +334,11 @@
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1581570173_e99ec0fa</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1581570173_e99ec0fa?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1582050728_558cb8d5</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1582050728_558cb8d5?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: dask-cloudprovider,\n",
-       "Id: dask-cloudprovider_1581570173_e99ec0fa,\n",
+       "Id: dask-cloudprovider_1582050728_558cb8d5,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
@@ -358,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(25)"
+    "cluster.scale(25) # need more than default quota for this "
    ]
   },
   {
@@ -369,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03e194325afc4b6da0944fbf6c93497e",
+       "model_id": "f20c3221490245c3aac20a8609670529",
        "version_major": 2,
        "version_minor": 0
       },
