--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -186,7 +186,7 @@
    "source": [
     "## Startup cluster\n",
     "\n",
-    "Start the run now. The first time, this will take "
+    "Prepare Azure ML assets and start the cluster."
    ]
   },
   {
