probably shouldn't edit .ipynb files with VIM

--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -134,15 +134,6 @@
     "print(verify)"
    ]
   },
- {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Startup cluster\n",
-    "\n",
-    "Prepare Azure ML assets and start the cluster."
-   ]
-  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -189,7 +180,15 @@
     "ct"
    ]
   },
- 
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Startup cluster\n",
+    "\n",
+    "Prepare Azure ML assets and start the cluster."
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -249,6 +248,7 @@
    "source": [
     "### Start cluster\n",
     "\n",
+    "This will soon be replaced."
    ]
   },
   {
