--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -184,15 +184,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Startup cluster\n",
-    "\n",
-    "Prepare Azure ML assets and start the cluster."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Mount Compute Instance code fileshare\n",
     "\n",
     "This will create the compute instance code fileshare as a datastore. The default name `code-391ff5ac-6576-460f-ba4d-7e03433c68b6` and has the same credentials as the default fileshare for the workspace. This will be mounted for easy access to notebooks on the cluster."
@@ -220,7 +211,7 @@
    "source": [
     "### Get data\n",
     "\n",
-    "This will get NOAA ISD Weather data which is used in the demo. If you already have data, you can skip this."
+    "This will get NOAA ISD Weather data which is used in the demo. If you already have data in Blob or ALDSv1v2 you want to use, skip this."
    ]
   },
   {
@@ -247,8 +238,7 @@
    "metadata": {},
    "source": [
     "### Start cluster\n",
-    "\n",
-    "This will soon be replaced."
+    "\n"
    ]
   },
   {
